// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSearchParams allows removal of search params when a default is provided 1`] = `
<View>
  <Text>
    The current query is "
    initial
    ".
  </Text>
  <View>
    Click
  </View>
</View>
`;

exports[`useSearchParams allows removal of search params when a default is provided 2`] = `
<View>
  <Text>
    The current query is "
    ".
  </Text>
  <View>
    Click
  </View>
</View>
`;

exports[`useSearchParams reads and writes the search string (functional update) 1`] = `
<View>
  <Text>
    The current query is "
    Michael Jackson
    ".
  </Text>
  <Text>
    The new query is "
    ".
  </Text>
  <View>
    <TextInput
      onChangeText={[Function]}
      value="Michael Jackson"
    />
  </View>
</View>
`;

exports[`useSearchParams reads and writes the search string (functional update) 2`] = `
<View>
  <Text>
    The current query is "
    Michael Jackson - appended
    ".
  </Text>
  <Text>
    The new query is "
    Ryan Florence
    ".
  </Text>
  <View>
    <TextInput
      onChangeText={[Function]}
      value="Michael Jackson"
    />
  </View>
</View>
`;

exports[`useSearchParams reads and writes the search string 1`] = `
<View>
  <Text>
    The current query is "
    Michael Jackson
    ".
  </Text>
  <View>
    <TextInput
      onChangeText={[Function]}
      value="Michael Jackson"
    />
  </View>
</View>
`;

exports[`useSearchParams reads and writes the search string 2`] = `
<View>
  <Text>
    The current query is "
    Ryan Florence
    ".
  </Text>
  <View>
    <TextInput
      onChangeText={[Function]}
      value="Ryan Florence"
    />
  </View>
</View>
`;
